# MetaStuff

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  JsonCast.cpp  JsonCast.h  JsonCast.inl  MovieInfo.h  Person.h  StringCast.cpp  StringCast.h  main.cpp
include/: JsonCast.h  Member.h  Member.inl  MemberPtr.h  MemberPtr.inl  Meta.h  Meta.inl  template_helpers.h  template_helpers.inl
include/MetaStuff/: Macros.h  Member.h  Meta.h
include/detail/: MetaGetter.h  MetaHolder.h  template_helpers.h  template_helpers.inl
